Bug 501250 - Problems view configuration dialog has wrong background
Removed the CSS rule that renders a wrong color in the Problems View >
Filters dialog. This change is the fix for the default Windows theme.

Windows:
without change: http://i.imgur.com/fqpTzEd.png
with the change: http://imgur.com/E8IHbyI.png
--> fixes both Text and TreeView (un-greyed).

--- a/bundles/org.eclipse.ui.themes/css/e4_default_win7.css
+++ b/bundles/org.eclipse.ui.themes/css/e4_default_win7.css
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 420836
  *     Frank Appel <fappel@codeaffine.com> - Bug 325937
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 501250
  *******************************************************************************/
 
 @import url("platform:/plugin/org.eclipse.ui.themes/css/e4_basestyle.css");
@@ -92,7 +93,7 @@ CTabFolder Canvas {
 Form, FormHeading {
 	background-color: #ffffff;
 	background: #ffffff;
-	background-image: #ffffff*;
+	background-image: #ffffff;
 	color: #505050;
 }
 
@@ -106,11 +107,6 @@ Form {
 	h-hover-light-color: #505050;
 	h-bottom-keyline-2-color: #eaeaea;
 	h-bottom-keyline-1-color: #eaeaea;
-
-	/* We also have to force the background mode (the
-   * Label/ToolBar in the heading should inherit it).
-   */
-	swt-background-mode: 'force';
 }
 
 
